rename to project-summary

--- a/app/views/current/views/water/abstraction-progress-condition.html
+++ b/app/views/current/views/water/abstraction-progress-condition.html
@@ -21,7 +21,7 @@ You may be able to apply for a large grant from this scheme
 
     <p>You will need a licence if you want to take more than 20 cubic metres (approximately 4,400 gallons) a day from a surface or underground source.</p>
 
-    <form class="form" action="project-details" method="post">
+    <form class="form" action="project-summary" method="post">
 
       <button class="govuk-button" data-module="govuk-button">Continue</button>
 
