add hint /abstraction-licence

--- a/app/views/current/views/water/abstraction-licence.html
+++ b/app/views/current/views/water/abstraction-licence.html
@@ -23,6 +23,9 @@
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
+              <div id="email-hint" class="govuk-hint">
+                Contact the Environment Agency if you have questions about abstraction licences
+              </div>
               <div class="govuk-radios__item">
                 <input class="govuk-radios__input" id="abstraction-licence" name="abstraction-licence" type="radio" value="yes" {{ checked("abstraction-licence", "yes") }}>
                 <label class="govuk-label govuk-radios__label" for="abstraction-licence">
