make /abstraction-licence items not inline

--- a/app/views/current/views/water/abstraction-licence.html
+++ b/app/views/current/views/water/abstraction-licence.html
@@ -22,7 +22,7 @@
                 Does the project have an abstraction licence or will have it before XX October 2021?
               </h1>
             </legend>
-            <div class="govuk-radios govuk-radios--inline">
+            <div class="govuk-radios">
               <div id="email-hint" class="govuk-hint">
                 Contact the Environment Agency if you have questions about abstraction licences
               </div>
