from radios to checkboxes

--- a/app/views/current/views/water/environment.html
+++ b/app/views/current/views/water/environment.html
@@ -22,46 +22,47 @@
                 How will the project improve the environment?
               </h1>
             </legend>
-            <div class="govuk-radios">
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="environment-1" name="environment" type="radio" value="Stop or reduce summer abstraction" {{ checked("environment", "stop-reduce-summer-abstraction") }}>
-                <label class="govuk-label govuk-radios__label" for="environment">
+            
+            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="environment-1" name="environment" type="checkbox" value="Stop or reduce summer abstraction" {{ checked("environment", "stop-reduce-summer-abstraction") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="environment-1">
                   Stop or reduce summer abstraction
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="environment-2" name="environment" type="radio" value="More efficient use of water" {{ checked("environment", "more-efficient-water-use") }}>
-                <label class="govuk-label govuk-radios__label" for="environment-2">
-                  More efficient use of water
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="environment-2 name="environment" type="checkbox" value=" More efficient use of water" {{ checked("environment", "more-efficient-water-use") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="environment-2">
+                   More efficient use of water
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="environment-3" name="environment" type="radio" value="Reduce soil erosion" {{ checked("environment", "reduce-soil-erosion") }}>
-                <label class="govuk-label govuk-radios__label" for="environment-3">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="environment-3 name="environment" type="checkbox" value="Reduce soil erosion" {{ checked("environment", "reduce-soil-erosion") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="environment-3">
                   Reduce soil erosion
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="environment-4" name="environment" type="radio" value="Design of the reservoir: Create a wetland area" {{ checked("environment", "reservoir-design-create-wetland-area") }}>
-                <label class="govuk-label govuk-radios__label" for="environment-4">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="environment-4 name="environment" type="checkbox" value="Design of the reservoir: Create a wetland area" {{ checked("environment", "reservoir-design-create-wetland-area") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="environment-4">
                   Design of the reservoir: Create a wetland area
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="environment-5" name="environment" type="radio" value="Design of the reservoir: Planting" {{ checked("environment", "reservoir-design-planting") }}>
-                <label class="govuk-label govuk-radios__label" for="environment-5">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="environment-5 name="environment" type="checkbox" value="Design of the reservoir: Planting" {{ checked("environment", "reservoir-design-planting") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="environment-5">
                   Design of the reservoir: Planting
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="environment-6" name="environment" type="radio" value="Reduce energy use" {{ checked("environment", "reduce-energy-use") }}>
-                <label class="govuk-label govuk-radios__label" for="environment-6">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="environment-6 name="environment" type="checkbox" value="Reduce energy use" {{ checked("environment", "reduce-energy-use") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="environment-6">
                   Reduce energy use
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="environment-7" name="environment" type="radio" value="No improvement" {{ checked("environment", "no-improvement") }}>
-                <label class="govuk-label govuk-radios__label" for="environment-7">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="environment-7 name="environment" type="checkbox" value="No improvement" {{ checked("environment", "no-improvement") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="environment-7">
                   It does not improve the environment
                 </label>
               </div>
