--- a/app/views/current/views/water/irrigated-crops.html
+++ b/app/views/current/views/water/irrigated-crops.html
@@ -22,16 +22,16 @@
                 What crops will be irrigated?
               </h1>
             </legend>
-            <div class="govuk-radios">
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="irrigated-crops" name="irrigated-crops" type="radio" value="field-scale" {{ checked("irrigated-crops", "field-scale") }}>
-                <label class="govuk-label govuk-radios__label" for="irrigated-crops">
+            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigated-crops-1" name="irrigated-crops" type="checkbox" value="field-scale" {{ checked("irrigated-crops", "field-scale") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigated-crops-1">
                   Field-scale crops (eg potatoes, onions, carrots)
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="irrigated-crops-2" name="irrigated-crops" type="radio" value="protected" {{ checked("irrigated-crops", "protected") }}>
-                <label class="govuk-label govuk-radios__label" for="irrigated-crops-2">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigated-crops-2 name="irrigated-crops" type="checkbox" value="protected" {{ checked("irrigated-crops", "protected") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigated-crops-2">
                   Protected cropping (eg glasshouse, poly tunnel)
                 </label>
               </div>
