--- a/app/views/current/views/water/irrigation-systems.html
+++ b/app/views/current/views/water/irrigation-systems.html
@@ -22,34 +22,34 @@
                 What systems will be used to irrigate?
               </h1>
             </legend>
-            <div class="govuk-radios">
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="irrigation-systems" name="irrigation-systems" type="radio" value="trickle" {{ checked("irrigation-systems", "trickle") }}>
-                <label class="govuk-label govuk-radios__label" for="irrigation-systems">
+            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-systems-1" name="irrigation-systems" type="checkbox" value="trickle" {{ checked("irrigation-systems", "trickle") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-1">
                   Trickle
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="irrigation-systems-2" name="irrigation-systems" type="radio" value="boom-irrigator" {{ checked("irrigation-systems", "boom-irrigator") }}>
-                <label class="govuk-label govuk-radios__label" for="irrigation-systems-2">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-systems-2 name="irrigation-systems" type="checkbox" value="boom irrigator" {{ checked("irrigation-systems", "boon-irrigator") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-2">
                   Boom irrigator
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="irrigation-systems-3" name="irrigation-systems" type="radio" value="ebb-flood" {{ checked("irrigation-systems", "ebb-flood") }}>
-                <label class="govuk-label govuk-radios__label" for="irrigation-systems-3">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-systems-3 name="irrigation-systems" type="checkbox" value="ebb and flood" {{ checked("irrigation-systems", "ebb-flood") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-3">
                   Ebb and flood
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="irrigation-systems-4" name="irrigation-systems" type="radio" value="sprinklers" {{ checked("irrigation-systems", "sprinklers") }}>
-                <label class="govuk-label govuk-radios__label" for="irrigation-systems-4">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-systems-4 name="irrigation-systems" type="checkbox" value="sprinklers" {{ checked("irrigation-systems", "sprinklers") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-4">
                   Sprinklers
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="irrigation-systems-5" name="irrigation-systems" type="radio" value="rain-gun" {{ checked("irrigation-systems", "rain-gun") }}>
-                <label class="govuk-label govuk-radios__label" for="irrigation-systems-5">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-systems-5 name="irrigation-systems" type="checkbox" value="rain gun" {{ checked("irrigation-systems", "rain-gun") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-5">
                   Rain gun
                 </label>
               </div>
