--- a/app/views/current/views/water/irrigation-water-source.html
+++ b/app/views/current/views/water/irrigation-water-source.html
@@ -22,34 +22,34 @@
                 Where will the water used for irrigation come from?
               </h1>
             </legend>
-            <div class="govuk-radios">
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="irrigation" name="irrigation" type="radio" value="peak-flow" {{ checked("irrigation", "peak-flow") }}>
-                <label class="govuk-label govuk-radios__label" for="irrigation">
+            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-1" name="irrigation" type="checkbox" value="peak flow" {{ checked("irrigation", "peak-flow") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-1">
                   Peak-flow surface water
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="irrigation-2" name="irrigation" type="radio" value="bore-hole" {{ checked("irrigation", "bore-hole") }}>
-                <label class="govuk-label govuk-radios__label" for="irrigation-2">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-2 name="irrigation" type="checkbox" value="bore hole" {{ checked("irrigation", "bore-hole") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-2">
                   Bore hole/aquifer
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="irrigation-3" name="irrigation" type="radio" value="surface-abstraction" {{ checked("irrigation", "surface-abstraction") }}>
-                <label class="govuk-label govuk-radios__label" for="irrigation-3">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-3 name="irrigation" type="checkbox" value="surface abstraction" {{ checked("irrigation", "surface-abstraction") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-3">
                   Summer water surface abstraction
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="irrigation-4" name="irrigation" type="radio" value="rain-water" {{ checked("irrigation", "rain-water") }}>
-                <label class="govuk-label govuk-radios__label" for="irrigation-4">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-4 name="irrigation" type="checkbox" value="rain water" {{ checked("irrigation", "rain-water") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-4">
                   Rain water harvesting
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="irrigation-5" name="irrigation" type="radio" value="mains" {{ checked("irrigation", "mains") }}>
-                <label class="govuk-label govuk-radios__label" for="irrigation-5">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="irrigation-5 name="irrigation" type="checkbox" value="mains" {{ checked("irrigation", "mains") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="irrigation-5">
                   Mains
                 </label>
               </div>
