--- a/app/views/current/views/water/productivity.html
+++ b/app/views/current/views/water/productivity.html
@@ -22,37 +22,37 @@
                 How will the project improve productivity?
               </h1>
             </legend>
-			<div id="email-hint" class="govuk-hint">
-				Productivity is about how much is produced relative to inputs (eg increased yield for the same inputs or the same yield with lower inputs).
-			</div>
-            <div class="govuk-radios">
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="productivity" name="productivity" type="radio" value="Increase yield" {{ checked("productivity", "increase-yield") }}>
-                <label class="govuk-label govuk-radios__label" for="productivity">
+            <div id="email-hint" class="govuk-hint">
+              Productivity is about how much is produced relative to inputs (eg increased yield for the same inputs or the same yield with lower inputs).
+            </div>
+            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="productivity-1" name="productivity" type="checkbox" value="Increase yield" {{ checked("productivity", "increase-yield") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="productivity-1">
                   Increase yield
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="productivity-2" name="productivity" type="radio" value="Improve quality" {{ checked("productivity", "improve-quality") }}>
-                <label class="govuk-label govuk-radios__label" for="productivity-2">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="productivity-2 name="productivity" type="checkbox" value="Improve quality" {{ checked("productivity", "improve-quality") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="productivity-2">
                   Improve quality
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="productivity-3" name="productivity" type="radio" value="Introduce high value crops" {{ checked("productivity", "high-value-crops") }}>
-                <label class="govuk-label govuk-radios__label" for="productivity-3">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="productivity-3 name="productivity" type="checkbox" value="Introduce high-value crops" {{ checked("productivity", "high-value-crops") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="productivity-3">
                   Introduce high-value crops
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="productivity-4" name="productivity" type="radio" value="Introduce protected crops" {{ checked("productivity", "protected-crops") }}>
-                <label class="govuk-label govuk-radios__label" for="productivity-4">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="productivity-4 name="productivity" type="checkbox" value="Introduce protected crops" {{ checked("productivity", "protected-crops") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="productivity-4">
                   Introduce protected crops
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="productivity-5" name="productivity" type="radio" value="No improvement" {{ checked("productivity", "no-improvement") }}>
-                <label class="govuk-label govuk-radios__label" for="productivity-5">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="productivity-5 name="productivity" type="checkbox" value="No improvement" {{ checked("productivity", "no-improvement") }}>
+                <label class="govuk-label govuk-checkboxes__label" for="productivity-5">
                   It does not improve productivity
                 </label>
               </div>
