--- a/app/views/current/views/water/irrigated-crops.html
+++ b/app/views/current/views/water/irrigated-crops.html
@@ -30,7 +30,7 @@
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigated-crops-2 name="irrigated-crops" type="checkbox" value="protected" {{ checked("irrigated-crops", "protected") }}>
+                <input class="govuk-checkboxes__input" id="irrigated-crops-2" name="irrigated-crops" type="checkbox" value="protected" {{ checked("irrigated-crops", "protected") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigated-crops-2">
                   Protected cropping (eg glasshouse, poly tunnel)
                 </label>
