--- a/app/views/current/views/water/irrigation-systems.html
+++ b/app/views/current/views/water/irrigation-systems.html
@@ -30,25 +30,25 @@
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-2 name="irrigation-systems" type="checkbox" value="boom irrigator" {{ checked("irrigation-systems", "boon-irrigator") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-systems-2" name="irrigation-systems" type="checkbox" value="boom irrigator" {{ checked("irrigation-systems", "boon-irrigator") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-2">
                   Boom irrigator
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-3 name="irrigation-systems" type="checkbox" value="ebb and flood" {{ checked("irrigation-systems", "ebb-flood") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-systems-3" name="irrigation-systems" type="checkbox" value="ebb and flood" {{ checked("irrigation-systems", "ebb-flood") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-3">
                   Ebb and flood
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-4 name="irrigation-systems" type="checkbox" value="sprinklers" {{ checked("irrigation-systems", "sprinklers") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-systems-4" name="irrigation-systems" type="checkbox" value="sprinklers" {{ checked("irrigation-systems", "sprinklers") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-4">
                   Sprinklers
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-systems-5 name="irrigation-systems" type="checkbox" value="rain gun" {{ checked("irrigation-systems", "rain-gun") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-systems-5" name="irrigation-systems" type="checkbox" value="rain gun" {{ checked("irrigation-systems", "rain-gun") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-systems-5">
                   Rain gun
                 </label>
