--- a/app/views/current/views/water/irrigation-water-source.html
+++ b/app/views/current/views/water/irrigation-water-source.html
@@ -30,25 +30,25 @@
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-2 name="irrigation" type="checkbox" value="bore hole" {{ checked("irrigation", "bore-hole") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-2" name="irrigation" type="checkbox" value="bore hole" {{ checked("irrigation", "bore-hole") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-2">
                   Bore hole/aquifer
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-3 name="irrigation" type="checkbox" value="surface abstraction" {{ checked("irrigation", "surface-abstraction") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-3" name="irrigation" type="checkbox" value="surface abstraction" {{ checked("irrigation", "surface-abstraction") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-3">
                   Summer water surface abstraction
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-4 name="irrigation" type="checkbox" value="rain water" {{ checked("irrigation", "rain-water") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-4" name="irrigation" type="checkbox" value="rain water" {{ checked("irrigation", "rain-water") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-4">
                   Rain water harvesting
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigation-5 name="irrigation" type="checkbox" value="mains" {{ checked("irrigation", "mains") }}>
+                <input class="govuk-checkboxes__input" id="irrigation-5" name="irrigation" type="checkbox" value="mains" {{ checked("irrigation", "mains") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigation-5">
                   Mains
                 </label>
