--- a/app/views/current/views/water/environment.html
+++ b/app/views/current/views/water/environment.html
@@ -31,37 +31,37 @@
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="environment-2 name="environment" type="checkbox" value=" More efficient use of water" {{ checked("environment", "more-efficient-water-use") }}>
+                <input class="govuk-checkboxes__input" id="environment-2" name="environment" type="checkbox" value="More efficient use of water" {{ checked("environment", "more-efficient-water-use") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="environment-2">
                    More efficient use of water
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="environment-3 name="environment" type="checkbox" value="Reduce soil erosion" {{ checked("environment", "reduce-soil-erosion") }}>
+                <input class="govuk-checkboxes__input" id="environment-3" name="environment" type="checkbox" value="Reduce soil erosion" {{ checked("environment", "reduce-soil-erosion") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="environment-3">
                   Reduce soil erosion
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="environment-4 name="environment" type="checkbox" value="Design of the reservoir: Create a wetland area" {{ checked("environment", "reservoir-design-create-wetland-area") }}>
+                <input class="govuk-checkboxes__input" id="environment-4" name="environment" type="checkbox" value="Design of the reservoir: Create a wetland area" {{ checked("environment", "reservoir-design-create-wetland-area") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="environment-4">
                   Design of the reservoir: Create a wetland area
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="environment-5 name="environment" type="checkbox" value="Design of the reservoir: Planting" {{ checked("environment", "reservoir-design-planting") }}>
+                <input class="govuk-checkboxes__input" id="environment-5" name="environment" type="checkbox" value="Design of the reservoir: Planting" {{ checked("environment", "reservoir-design-planting") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="environment-5">
                   Design of the reservoir: Planting
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="environment-6 name="environment" type="checkbox" value="Reduce energy use" {{ checked("environment", "reduce-energy-use") }}>
+                <input class="govuk-checkboxes__input" id="environment-6" name="environment" type="checkbox" value="Reduce energy use" {{ checked("environment", "reduce-energy-use") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="environment-6">
                   Reduce energy use
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="environment-7 name="environment" type="checkbox" value="No improvement" {{ checked("environment", "no-improvement") }}>
+                <input class="govuk-checkboxes__input" id="environment-7" name="environment" type="checkbox" value="No improvement" {{ checked("environment", "no-improvement") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="environment-7">
                   It does not improve the environment
                 </label>
