--- a/app/views/current/views/water/productivity.html
+++ b/app/views/current/views/water/productivity.html
@@ -33,25 +33,25 @@
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="productivity-2 name="productivity" type="checkbox" value="Improve quality" {{ checked("productivity", "improve-quality") }}>
+                <input class="govuk-checkboxes__input" id="productivity-2" name="productivity" type="checkbox" value="Improve quality" {{ checked("productivity", "improve-quality") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="productivity-2">
                   Improve quality
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="productivity-3 name="productivity" type="checkbox" value="Introduce high-value crops" {{ checked("productivity", "high-value-crops") }}>
+                <input class="govuk-checkboxes__input" id="productivity-3" name="productivity" type="checkbox" value="Introduce high-value crops" {{ checked("productivity", "high-value-crops") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="productivity-3">
                   Introduce high-value crops
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="productivity-4 name="productivity" type="checkbox" value="Introduce protected crops" {{ checked("productivity", "protected-crops") }}>
+                <input class="govuk-checkboxes__input" id="productivity-4" name="productivity" type="checkbox" value="Introduce protected crops" {{ checked("productivity", "protected-crops") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="productivity-4">
                   Introduce protected crops
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="productivity-5 name="productivity" type="checkbox" value="No improvement" {{ checked("productivity", "no-improvement") }}>
+                <input class="govuk-checkboxes__input" id="productivity-5" name="productivity" type="checkbox" value="No improvement" {{ checked("productivity", "no-improvement") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="productivity-5">
                   It does not improve productivity
                 </label>
