summary: up to /irrigation-water-source

--- a/app/views/current/views/water/irrigated-crops.html
+++ b/app/views/current/views/water/irrigated-crops.html
@@ -24,13 +24,13 @@
             </legend>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigated-crops-1" name="irrigated-crops" type="checkbox" value="field-scale" {{ checked("irrigated-crops", "field-scale") }}>
+                <input class="govuk-checkboxes__input" id="irrigated-crops-1" name="irrigated-crops" type="checkbox" value="field-scale crops" {{ checked("irrigated-crops", "field-scale") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigated-crops-1">
                   Field-scale crops (eg potatoes, onions, carrots)
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
-                <input class="govuk-checkboxes__input" id="irrigated-crops-2" name="irrigated-crops" type="checkbox" value="protected" {{ checked("irrigated-crops", "protected") }}>
+                <input class="govuk-checkboxes__input" id="irrigated-crops-2" name="irrigated-crops" type="checkbox" value="protected cropping" {{ checked("irrigated-crops", "protected") }}>
                 <label class="govuk-label govuk-checkboxes__label" for="irrigated-crops-2">
                   Protected cropping (eg glasshouse, poly tunnel)
                 </label>
