--- a/app/views/current/views/water/check-answers-all.html
+++ b/app/views/current/views/water/check-answers-all.html
@@ -390,9 +390,22 @@
       </div>
     </dl>
 
-    <h2 class="govuk-heading-m govuk-!-margin-top-9">Business details</h2>
+    <h2 class="govuk-heading-m govuk-!-margin-top-9">Project and business details</h2>
 
     <dl class="govuk-summary-list">
+      <div class="govuk-summary-list__row">
+        <dt class="govuk-summary-list__key govuk-!-width-one-third">
+          Project name
+        </dt>
+        <dd class="govuk-summary-list__value">
+          {{ data['project-name'] }}
+        </dd>
+        <dd class="govuk-summary-list__actions">
+          <a class="govuk-link" href="business">
+            Change<span class="govuk-visually-hidden"> project name</span>
+          </a>
+        </dd>
+      </div>
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key govuk-!-width-one-third govuk-!-width-one-half">
           Business name
@@ -429,19 +442,6 @@
         <dd class="govuk-summary-list__actions">
           <a class="govuk-link" href="business">
             Change<span class="govuk-visually-hidden"> turnover</span>
-          </a>
-        </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key govuk-!-width-one-third">
-          New business
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['new-business'] | capitalize }}
-        </dd>
-        <dd class="govuk-summary-list__actions">
-          <a class="govuk-link" href="business">
-            Change<span class="govuk-visually-hidden"> planning permission required</span>
           </a>
         </dd>
       </div>
