clean up routes for applicant

--- a/app/views/current/views/water/applying.html
+++ b/app/views/current/views/water/applying.html
@@ -24,20 +24,20 @@
             </legend>
             <div class="govuk-radios">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applying" name="applying" type="radio" value="own" {{ checked("applying", "own") }}>
-                <label class="govuk-label govuk-radios__label" for="applying">
+                <input class="govuk-radios__input" id="applicant-1" name="applicant" type="radio" value="farmer" {{ checked("applicant", "farmer") }}>
+                <label class="govuk-label govuk-radios__label" for="applicant-1">
                   Farmer (the grant is for my business)
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applying-2" name="applying" type="radio" value="farm-manager" {{ checked("applying", "farm-manager") }}>
-                <label class="govuk-label govuk-radios__label" for="applying-2">
+                <input class="govuk-radios__input" id="applicant-2" name="applicant" type="radio" value="farm-manager" {{ checked("applicant", "farm-manager") }}>
+                <label class="govuk-label govuk-radios__label" for="applicant-2">
                   Farm manager (the grant is for a business I work for)
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="applying-3" name="applying" type="radio" value="agent" {{ checked("applying", "agent") }}>
-                <label class="govuk-label govuk-radios__label" for="applying-3">
+                <input class="govuk-radios__input" id="applicant-3" name="applicant" type="radio" value="agent" {{ checked("applicant", "agent") }}>
+                <label class="govuk-label govuk-radios__label" for="applicant-3">
                   Agent
                 </label>
               </div>
